--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "preview": "vite preview"
   },
   "devDependencies": {
+    "eslint": "^9.24.0",
     "vite": "^6.2.0"
   },
   "dependencies": {
